# partialfunction

./: Cargo.toml  README.md
src/: lib.rs
tests/: tests.rs  tests_macro.rs
