[package]
name = "PartialFunction"
version = "0.1.0"
authors = ["jojolepro <jojolepromain@gmail.com>"]
description = """
A clean way to define function as a set of subfunctions where each has
defined start and end bounds.
"""

keywords = ["partial", "function", "curve"]
categories = ["util", "math"]
documentation = "https://docs.rs/glium"
repository = "https://github.com/jojolepro/partialfunction"
license = "Apache-2.0"
exclude = ["doc"]

[dependencies]
