[package]
name = "partial_function"
version = "0.1.1"
authors = ["jojolepro <jojolepromain@gmail.com>"]
description = """
A clean way to define function as a set of subfunctions where each has
defined start and end bounds.
"""

keywords = ["partial", "function", "curve"]
documentation = "https://docs.rs/partial_function"
repository = "https://github.com/jojolepro/partialfunction"
license = "Apache-2.0"
exclude = ["doc"]

[dependencies]
